2008-02-04  Claude Paroz  <claude@2xlibre.net>

	* translation-teams.xml.in: Urdu ISO 639-1 is 'ur'.
	Fixes #500302.

2008-02-02  Claude Paroz  <claude@2xlibre.net>

	* module.py: More precise grep to prevent catching old translations.
	* modules.py: Attach subpath property to branch instead of scmroot, gives
	much more flexibility.
	* gnome-modules.xml.in: Adapted banshee and release notes modules to new
	subpath location. Added banshee stable. Fixes #513638.

2008-01-30  Claude Paroz  <claude@2xlibre.net>

	* gnome-modules.xml.in:
	* releases.xml.in: bug-buddy branched for 2.20.

2008-01-29  Claude Paroz  <claude@2xlibre.net>

	* gnome-modules.xml.in: Added Fantasdic help doc.
	* update-stats.py: Added basic support for non automake doc modules.

2008-01-29  Gil Forcada  <gforcada@gnome.org>

	* gnome-modules.xml.in: Added swfdec-gnome.
	* releases.xml.in: Added swfdec-gnome to gnome-2-22 moduleset.
	* people.xml.in: Added Benjamin Otte.

2008-01-27  Gil Forcada  <gforcada@gnome.org>

	* compare-releases.py:
	Better wording in error messages (thanks to Claude). Closes #512124.

2008-01-20  Gil Forcada  <gforcada@gnome.org>

	* releases.xml.in:
	Removed duplicate entrys in gnome-2-22 and gnome-extras. Closes #510815.

2008-01-19  Claude Paroz  <claude@2xlibre.net>

	* people.xml.in:
	* translation-teams.xml.in: New Spanish coordinator is now Jorge
	González González.

2008-01-18  Gil Forcada  <gforcada@gnome.org>

	* update-stats.py:
	* data.py:
	only show errors in stderr if defaults.DEBUG is set to 1

2008-01-18  Claude Paroz  <claude@2xlibre.net>

	* gnome-modules.xml.in:
	* releases.xml.in: Added jhbuild module for doc translation.

2008-01-18  Gil Forcada  <gforcada@gnome.org>

	* gnome-modules.xml.in: Removed gnome-office since it has been moved to
	svn-archive.gnome.org.

2008-01-17  Gil Forcada  <gforcada@gnome.org>

	* gnome-modules.xml.in: Added a new module: libepc
	* releases.xml.in: Added libepc to gnome-extras release set
