@@ -326,10 +326,11 @@
     <branch id="HEAD"/>
   </module>
   <module id="evolution-webcal">
-    <branch id="HEAD" stringfrozen="true"/>
+    <branch id="HEAD"/>
     <branch id="gnome-2-14" stringfrozen="true"/>
     <branch id="gnome-2-16" stringfrozen="true"/>
     <branch id="gnome-2-18" stringfrozen="true"/>
+    <branch id="gnome-2-20" stringforzen="true"/>
   </module>
   <module id="evolution-xmltv">
     <branch id="HEAD"/>
