@@ -464,7 +464,7 @@
       <module id="evolution" branch="gnome-2-20"/>
       <module id="evolution-data-server" branch="gnome-2-20"/>
       <module id="evolution-exchange" branch="gnome-2-20"/>
-      <module id="evolution-webcal"/>
+      <module id="evolution-webcal" branch="gnome-2-20"/>
       <module id="fast-user-switch-applet"/>
       <module id="file-roller" branch="gnome-2-20"/>
       <module id="gcalctool" branch="gnome-2-20"/>
