@@ -1,3 +1,9 @@
+2008-02-05  Gil Forcada  <gforcada@gnome.org>
+
+	* gnome-modules.xml.in:
+	* releases.xml.in:
+	evolution-webcal branched for gnome-2-20.
+
 2008-02-04  Claude Paroz  <claude@2xlibre.net>
 
 	* translation-teams.xml.in: Urdu ISO 639-1 is 'ur'.
